--- a/gb/23/8/21/n14058371.md
+++ b/gb/23/8/21/n14058371.md
@@ -3,65 +3,56 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>加拿大总理特鲁多抨击Meta屏蔽山火新闻</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/08/id14058373-19984238-600x400.jpg" />
-<h6>加拿大总理特鲁多周一 批评社交媒体巨头 Meta 将企业利润置于人民安全之上。图为特鲁多资料照。（加通社）
+<h6>加拿大总理特鲁多周一批评社交媒体巨头Meta将企业利润置于人民安全之上。图为特鲁多资料照。（加通社）
 </h6>
 <hr>
-<p>【大纪元2023年08月22日讯】（大纪元记者王兰多伦多报导）正值山火继续迫使数千名加拿大人离开家园之际，总理特鲁多（Justin Trudeau）周一（8月21日）抨击社交媒体巨头 Meta 决定封锁加拿大新闻，将企业利益置于人民安全之上。</p>
-<p>据CBC 报导，特鲁多周一在爱德华王子岛的新闻发布会上说：“在目前紧急情况下，最新的本地信息比以往任何时候都更加重要，Facebook 将企业利润置于人民安全之上、置于高质量的本地新闻之上，现在不是这样做的时候。”</p>
-<p>他还表示，像 Facebook 这样的公司阻止当地新闻机构能够向加拿大人提供最新信息，而且加拿大人花了大量时间在社交媒体上，这非常不可思议。</p>
-<p>Facebook 和 Instagram 的母公司 Meta 已禁止加拿大人查看加拿大媒体的新闻。这是因为自由党政府 6 月通过的《在线新闻法案》C-18 法案，该法案要求大型社交媒体平台在加拿大新闻出版商的内容被共享时要提供补偿，但 Meta 和谷歌（ Google） 拒绝执行，因此决定屏蔽了加拿大新闻。</p>
-<p>结果，加拿大包括CBC、发生山火灾难的北部地区当地报纸The Yellowknifer 和数字广播公司Cabin Radio的内容被屏蔽，人们无法在Facebook 和Instagram（两个最热门的新闻来源）上访问或分享新闻信息。</p>
-<p>虽然各方批评 Meta 做法，但上周发给 CBC 的一份声明中，该公司表示将坚持其立场。它还表示，政府网站和其他传播信息的来源不受该禁令的约束。</p>
+<p>【大纪元2023年08月22日讯】（大纪元记者王兰多伦多报导）正值山火继续迫使数千名加拿大人离开家园之际，总理特鲁多（Justin Trudeau）周一（8月21日）抨击社交媒体巨头Meta决定封锁加拿大新闻，将企业利益置于人民安全之上。</p>
+<p>据CBC报导，特鲁多周一在爱德华王子岛的新闻发布会上说：“在目前紧急情况下，最新的本地信息比以往任何时候都更加重要，Facebook将企业利润置于人民安全之上、置于高质量的本地新闻之上，现在不是这样做的时候。”</p>
+<p>他还表示，像Facebook这样的公司阻止当地新闻机构向加拿大人提供最新信息，而且加拿大人花了大量时间在社交媒体上，这非常不可思议。</p>
+<p>Facebook和Instagram的母公司Meta已禁止加拿大人查看加拿大媒体的新闻。这是因为自由党政府6月通过的《在线新闻法》（即C-18法案），该法案要求大型社交媒体平台在加拿大新闻出版商的内容被共享时要提供补偿，但Meta和谷歌（Google）拒绝执行，因此决定屏蔽加拿大新闻。</p>
+<p>结果，加拿大包括CBC、发生山火灾难的北部地区当地报纸The Yellowknifer和数字广播公司Cabin Radio的内容被屏蔽，人们无法在Facebook和Instagram（两个最热门的新闻来源）上访问或分享新闻信息。</p>
+<p>虽然各方批评Meta做法，但上周发给CBC的一份声明中，该公司表示将坚持其立场。它还表示，政府网站和其它传播信息的来源不受该禁令的约束。</p>
 <p>该公司表示，它已经激活了一项名为“安全检查”的功能，该功能允许用户单击按钮来更新他们的状态，并让他们的朋友和家人知道他们免受山火的威胁。</p>
 <p>当被问及他的政府是否会放弃《在线新闻法》时，特鲁多没有表现出任何让步的迹象。</p>
-<p>“这是 Facebook 的选择，”他说，“我们只是说，在民主国家，高质量的当地新闻很重要。现在，当人们担心自己的家园、担心社区、担心我们经历过的最糟糕的夏季极端天气事件时，这一点比以往任何时候都更重要。”</p>
+<p>“这是Facebook的选择。”他说，“我们只是说，在民主国家，高质量的当地新闻很重要。现在，当人们担心自己的家园、担心社区、担心我们经历过的最糟糕的夏季极端天气事件时，这一点比以往任何时候都更重要。”</p>
 <p>特鲁多正在爱德华王子岛与新任部长们参加内阁集思会，并在下个月众议院复会之前讨论政府议程。</p>
-<p>责任编辑：严枫</p>
-
-<hr>
-
-
+<p>责任编辑：严枫#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057636.md#1">招聘危机 威胁到加拿大骑警未来发展</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057606.md#1">加拿大高息压力下 短期固定按揭成新宠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057738.md#1">加拿大西部野火持续肆虐 数万人撤离家园</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057612.md#1">联邦自由党内阁集思会 商业团体促关注经济</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057587.md#1">加拿大最粗鲁最有礼貌城市都在安省</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057297.md#1">多伦多法轮功学员游行 声援4.17亿勇士三退</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056182.md#1">领英在加拿大推出身份证验证以建立信任</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/17/n14056180.md#1">向川普寄毒药信 加国魁省女子被判刑22年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/17/n14056203.md#1">高校下月开学 使用教育基金须知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/9/7/20/n2595538.md#1">加拿大山火迫使逾万人紧急疏散</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/10/8/3/n2984561.md#1">加拿大山火频发 两灭火直升机坠毁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/7/n14011885.md#1">组图：加拿大山火肆虐?烟雾笼罩纽约</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/7/n14011971.md#1">加拿大山火持续肆虐 浓烟飘至美国</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/29/n14025175.md#1">加拿大山火烟雾再次飘至纽约等地</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/18/n14036534.md#1">加拿大山火影响 纽约空气质量再拉警报</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106373.md#1">Meta推出公司身份验证 每月收费36.99元</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106346.md#1">继禁抖音后 加拿大禁止政府设备使用微信</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106363.md#1">民调：加拿大人对移民的支持率下降</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106347.md#1">明年酒精税再涨4.7% 纳税人联盟呼吁取消</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/24/n11208799.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇（5）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11489139.md#1" target="_blank">组图一：法轮功学员欧洲盛大游行 震撼世人</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/26/n11477432.md#1" target="_blank">共产暴政录：李大钊被绞死的真正原因</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/6/n4003814.md#1" target="_blank">信师信法　一路前行（下）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053239.md#1">【未解之谜】震惊世界 悬空寺之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057320.md#1">在高空目击UFO 美航空公司机长拍下画面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053717.md#1">“靠山”不可靠  皇上厚爱的驸马爷走上不归路</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056246.md#1">【未解之谜】上古通天神树 在这里？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049845.md#1">【古道人生】丈夫试测妻子是否忠心 结果酿成大祸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/19/n14057080.md#1">【环球直击】美国将对五家中国太阳能公司征税</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057492.md#1">【时事军事】F-16进入乌克兰的真正障碍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058074.md#1">【全球新闻】荷兰丹麦承诺提供乌克兰F16战机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/19/n14057202.md#1">分析：“金砖五国”已崩溃 应予以解散</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/19/n14057212.md#1">中共欲掀全民反间谍运动 遭各方抵制</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/19/n14057222.md#1">什么原因造成一瓶辣椒酱卖到五十多美元？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056733.md#1">李玟生前控诉录音引关注 节目母公司股价暴跌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056807.md#1">车祸后仍在复健 林志颖晒25年前帅照吐心声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056743.md#1">休息4天重返大马舞台 张学友：我不会再晕倒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057602.md#1">挺李玟 长春官方电台宣布永不合作《好声音》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057626.md#1">与李玟遭遇相似 乐嘉自曝录《超级演说家》受辱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14051902.md#1">吃对坚果可护心 营养师理想坚果前5名 第1名是它</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049510.md#1">高剂量维他命C疗法 护心又抗癌 3类人需避免</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056761.md#1">血癌患者修炼法轮功起死回生 遭迫害失去生命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057393.md#1">有20多年经验 美训犬师：我不会养这3种狗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053051.md#1">学到这些美德 你将会赢得更多的友谊</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105079.md#1">【环球直击】中共政治局开会讨论出阴招 只字不提李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104934.md#1">李善均为涉毒嫌疑四度鞠躬致歉 向家人道歉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/21/n14058371.htm">加拿大总理特鲁多抨击Meta屏蔽山火新闻</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058371.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
